--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/1.png">
   <link rel="stylesheet" href="index.css">
   
   <title>._Y_K_.</title>
@@ -18,7 +18,7 @@
 <body>
   <section>
     <div class="card">
-      <img class="image" src="./assets/images/avatar-jessica.jpeg" alt="">
+      <img class="image" src="./assets/images/image.jpeg" alt="">
       <div class="e">
         <p class="a">Yeshwanth Krishna</p>
         <p class="b">Tamilnadu, India</p>
